Almost ready to turn in final.

--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -2,7 +2,7 @@
 
   <div class="sim-content">
     <div class="sim-placeholder">
-    <img src="favicon.ico" height="100%" />
+      <img src="favicon.ico" height="100%" />
     </div>
   </div>
 
@@ -23,7 +23,8 @@
   <a href="/users/{{this._id}}">
     <div class="listen">
       <p>{{this.name}} |
-        <span class="caption-details">owns {{this.landLots.length}} homes on {{this.landLots.length}} lots</span>
+        <span class="caption-details">owns 
+         {{this.landLots.length}} lands</span>
       </p>
     </div>
   </a>
