--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -39,7 +39,7 @@
   <a href="/users/{{../userId}}/lands/{{this._id}}">
     <div class="listen">
       <p>{{this.name}}
-        <span>| {{this.location}} ({{this.type}}), {{this.homes.length}} homes complete </span>
+        <span class="caption-details">| {{this.location}} ({{this.type}}), {{this.homes.length}} homes complete </span>
       </p>
     </div>
   </a>
