--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,17 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{siteTitle}}</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/responsive.css">
   <link href="https://fonts.googleapis.com/css?family=Merienda|Encode+Sans+Expanded:500" rel="stylesheet">
 
 </head>
 
 <body>
-  <div class="container">
-    <div class="title-content">
+  <div id="container">
+    <header>
       <h1>{{siteTitle}}</h1>
-    </div>
+    </header>
+
+<nav>
+  nav area
+</nav>
+
     {{{body}}}
+
+<aside>
+  leftbar
+</aside>
+
+<right>
+  rightbar
+</right>
+
+
+
   </div>
 
 </body>
