--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,10 +1,6 @@
 <main>
-
-  <div class="sim-content">
-    <div class="sim-placeholder">
-      <img src="favicon.ico" height="100%" />
-    </div>
-  </div>
+  
+{{simContent}}
 
   <p class="caption-header">Welcome! Would you like to ...</p>
 
