Quick image. This is the end. Release Version 1.1 closed book.

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,13 +1,9 @@
-<div class="create-new-view">
-
   <form action="/users" method="POST">
 
     <div class="create-new-view dashboard-content">
 
       <div class="sim-content">
-        <div class="sim-placeholder">
-
-        </div>
+          <img src="/images/walking-doggie-icon.png" height="70%">
       </div>
 
       <p class="caption-header">Create your avatar</p>
@@ -48,6 +44,4 @@
 
     </div>
 
-</form>
-
-</div>
+    </form>
